@@ -94,5 +94,59 @@ METADATA should be an alist of completion metadata.  See
         `(metadata . ,metadata)
       (complete-with-action action table string pred))))
 
+;;;; Defined in subr-x.el
+
+(compat-defvar work-buffer--list nil ;; <compat-tests:with-work-buffer>
+  "List of work buffers.")
+
+(compat-defvar work-buffer-limit 10 ;; <compat-tests:with-work-buffer>
+  "Maximum number of reusable work buffers.
+When this limit is exceeded, newly allocated work buffers are
+automatically killed, which means that in a such case
+`with-work-buffer' becomes equivalent to `with-temp-buffer'.")
+
+(compat-defun work-buffer--get () ;; <compat-tests:with-work-buffer>
+  "Get a work buffer."
+  (let ((buffer (pop work-buffer--list)))
+    (if (buffer-live-p buffer)
+        buffer
+      ;; `generate-new-buffer' and `get-buffer-create' accept an
+      ;; INHIBIT-BUFFER-HOOKS argument on Emacs 28 and newer.
+      ;; Unfortunately it is hard or not possible to port this back. See
+      ;; issue <compat-gh:42>.
+      (static-if (>= emacs-major-version 28)
+          (generate-new-buffer " *work*" t)
+        (generate-new-buffer " *work*")))))
+
+(compat-defun work-buffer--release (buffer) ;; <compat-tests:with-work-buffer>
+  "Release work BUFFER."
+  (if (buffer-live-p buffer)
+      (with-current-buffer buffer
+        (let ((inhibit-read-only t) deactivate-mark)
+          (erase-buffer))
+        (delete-all-overlays)
+        (let (change-major-mode-hook)
+          ;; TODO Port back the KILL-PERMANENT argument from Emacs 29
+          ;; Right now permanent variables are not killed.
+          (static-if (>= emacs-major-version 29)
+              (kill-all-local-variables t)
+            (kill-all-local-variables)))
+        (push buffer work-buffer--list)))
+  (when (> (length work-buffer--list) work-buffer-limit)
+    (mapc #'kill-buffer (nthcdr work-buffer-limit work-buffer--list))
+    (setq work-buffer--list (ntake work-buffer-limit work-buffer--list))))
+
+(compat-defmacro with-work-buffer (&rest body) ;; <compat-tests:with-work-buffer>
+  "Create a work buffer, and evaluate BODY there like `progn'.
+Like `with-temp-buffer', but reuse an already created temporary
+buffer when possible, instead of creating a new one on each call."
+  (declare (indent 0) (debug t))
+  (let ((work-buffer (make-symbol "work-buffer")))
+    `(let ((,work-buffer (work-buffer--get)))
+       (with-current-buffer ,work-buffer
+         (unwind-protect
+             (progn ,@body)
+           (work-buffer--release ,work-buffer))))))
+
 (provide 'compat-31)
 ;;; compat-31.el ends here
